# RC5

./: Cargo.toml  README.md
benches/: mod.rs
src/: block_cipher.rs  lib.rs
src/core/: consts.rs  mod.rs
tests/: mod.rs
